--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ JWT_SECRET=SECRET
 JWT_EXPIRY=1d
 DB_USERNAME=postgres
 DB_PASSWORD=hjkttomi
-DB_HOST=localhost
+DB_HOST=0.0.0.0
 DB_PORT=27017
 DB_NAME=teachsync
