--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.7",
     "yup": "^1.3.2"
   }
 }
